--- a/app.json
+++ b/app.json
@@ -12,20 +12,34 @@
       "backgroundColor": "#ffffff"
     },
     "scheme": "shipment-tracker",
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.onireti.shipmenttracker"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.jsm.shipment-tracker"
+      "package": "com.onireti.shipmenttracker"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
-    "plugins": ["expo-router", "expo-font"]
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "51ede401-910c-4f67-a5b3-881f014a1bf3"
+      }
+    }
   }
 }
